namespace CustomLib.Exceptions
{
    public class ParseException : Exception
    {

    }
}
